force-app/src/objects/TR1__LK_IntegrationEndPoint__mdt.object
<CustomObject>
    <description>Acc:10/25/2017:Created to store LinkedIn Integration Endpoint</description>
    <fields>
        <fullName>TR1__AdditionalField__c</fullName>
        <description>KP:to capture job field to be used</description>
        <label>AdditionalField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Additional_Filters__c</fullName>
        <description>This field is created to filter contacts</description>
        <label>Additional Filters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__EndPoint__c</fullName>
        <description>Acc:10/25/2017:Store endpoint URL</description>
        <inlineHelpText>LinkedIn Endpoint URL</inlineHelpText>
        <label>EndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__QueryStringArrayName__c</fullName>
        <description>to capture query string arrayname</description>
        <inlineHelpText>Enter query string array name</inlineHelpText>
        <label>QueryStringArrayName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__QueryString__c</fullName>
        <description>to store query parameters to be passed as part of endpoint</description>
        <inlineHelpText>Enter query string parameter to be passed as part of endpoint</inlineHelpText>
        <label>QueryString</label>
        <type>TextArea</type>
    </fields>
    <label>(Deprecated)LK_IntegrationEndPoint</label>
    <pluralLabel>LK_IntegrationEndPoints</pluralLabel>
</CustomObject>